--- a/Compartido/App.config
+++ b/Compartido/App.config
@@ -4,13 +4,10 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-  </startup>
   <connectionStrings>
-  <add name="Entidades" connectionString="metadata=res://*/Modelos.Modelos.csdl|res://*/Modelos.Modelos.ssdl|res://*/Modelos.Modelos.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Luiskart;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="LuiskartEntities" connectionString="metadata=res://*/Modelos.Modelos.csdl|res://*/Modelos.Modelos.ssdl|res://*/Modelos.Modelos.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Luiskart;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
