--- a/Luiskart.Escritorio/App.config
+++ b/Luiskart.Escritorio/App.config
@@ -11,8 +11,8 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
     </startup>
   <connectionStrings>
-    <add name="Entidades" connectionString="metadata=res://*/Modelos.Modelos.csdl|res://*/Modelos.Modelos.ssdl|res://*/Modelos.Modelos.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Luiskart;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    <add name="LuiskartEntities" connectionString="metadata=res://*/Modelos.Modelos.csdl|res://*/Modelos.Modelos.ssdl|res://*/Modelos.Modelos.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Luiskart;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>  
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework"/>
     <providers>
